--- a/src/app/creator/gameform/jogo/jogo-players/jogo-partida.component.html
+++ b/src/app/creator/gameform/jogo/jogo-players/jogo-partida.component.html
@@ -1,6 +1,6 @@
  <form [formGroup]="jogoFormGroup">
    <div class="row">
-     <label for="" class="col m12">
+     <label for="" class="col m12 top-5">
        <h3 class="title  purple-text">Para quantos jogadores é o jogo?</h3>
      </label>
      <div class="col m12">
@@ -8,7 +8,7 @@
        </app-range>
      </div>
      <div></div>
-     <label for="" class="col m12">
+     <label for="" class="col m12 top-5">
        <h3 class="title  purple-text">Qual a Faíxa Etária indicada?</h3>
      </label>
      <div class="col m12">
@@ -17,14 +17,14 @@
      </div>
    </div>
    <div class="row">
-     <label for="" class="col m12">
+     <label for="" class="col m12 top-5">
        <h3 class="title  purple-text">Qual o tempo de montagem da partida (minutos)?</h3>
      </label>
      <div class="col m12">
        <app-range formControlName="montagem" [tick]="5" [minDe]="0" [maxDe]="30" [minAte]="0" [maxAte]="60">
        </app-range>
      </div>
-     <label for="" class="col m12">
+     <label for="" class="col m12 top-5">
        <h3 class="title  purple-text">Qual a duração média da partida (minutos)?</h3>
      </label>
      <div class="col m12">
