--- a/src/app/creator/gameform/jogo/jogo.component.html
+++ b/src/app/creator/gameform/jogo/jogo.component.html
@@ -1,9 +1,9 @@
-<div id="jogomain" class="row top-5">
-  <div class="col m3">
+<div id="jogomain" class="row top-5" >
+  <div class="col m3" style="position: fixed;">
     <h2 class="session-title">Sobre o Jogo</h2>
     <app-jogo-nav></app-jogo-nav>
   </div>
-  <div class="col m8">
+  <div class="col m9" style="margin-left: 20vw;">
     <router-outlet></router-outlet>
   </div>
  
