--- a/src/app/creator/gameform/regras/regras-basico/regras-basico.component.html
+++ b/src/app/creator/gameform/regras/regras-basico/regras-basico.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="regrasFormGroup">
   <h3 class="title  purple-text">Regras Básicas</h3>
-      <div class="container">
+      <div >
         <div class="row">
 
           
