--- a/src/app/creator/gameform/regras/regras-conclusao/regras-conclusao.component.html
+++ b/src/app/creator/gameform/regras/regras-conclusao/regras-conclusao.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="regrasFormGroup">
   <h3 class="title  purple-text">Vencedor/Conclusão</h3>
-      <div class="container">
+      <div >
         <div class="row">
           <div class="col m12">
             <h3>Descreva como é definido o vencedor:</h3>
