--- a/src/app/creator/gameform/regras/regras-objetivo/regras-objetivo.component.html
+++ b/src/app/creator/gameform/regras/regras-objetivo/regras-objetivo.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="regrasFormGroup">
   <h3 class="title  purple-text">Objetivo</h3>
-      <div class="container">
+      <div >
         <div class="row">
           <h3>Qual é o objetivo do jogo?</h3>
           <div class="col m12">
