--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,8 @@
 <app-about></app-about>
 
 <div class="row session" id="comofunciona">
-  <h3 class="session-title center top-5">Como Funciona</h3>
-  <app-banners [banners]="homeservice.homeBanners" [website]="websiteservice.website"></app-banners>
+  <!-- <h3 class="session-title center top-5">Como Funciona</h3> -->
+  <!-- <app-banners [banners]="homeservice.homeBanners" [website]="websiteservice.website"></app-banners> -->
   <div animateOnScroll animationName="bounceInLeft" class="col s12 center valign start">
     <a id="criebtn" routerLink="/creator"
       class="btn green btn-large waves-effect waves-light cta-button">crie seu boardgame agora!</a>
