--- a/src/app/creator/gameform/jogo/jogo-dados/jogo-dados.component.html
+++ b/src/app/creator/gameform/jogo/jogo-dados/jogo-dados.component.html
@@ -1,4 +1,4 @@
- <form [formGroup]="jogoFormGroup" class="container">
+ <form [formGroup]="jogoFormGroup" class="left-5 right-5" >
    <h3 class="title  purple-text">Vamos começar com as informações básicas do jogo:</h3>
    <div class="row">
      <div class="block col m12">
