--- a/src/app/creator/gameform/jogo/jogo-tema/jogo-tema.component.html
+++ b/src/app/creator/gameform/jogo/jogo-tema/jogo-tema.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="jogoFormGroup" class="container">
+<form [formGroup]="jogoFormGroup" >
     <h3 class="title  purple-text">Selecione as imagens e tema do jogo:</h3>
     <div class="row">
       <app-fileupload formControlName="logo" [accepts]="'img'" [label]="'Logo'" [path]="pathlogo"></app-fileupload>
