--- a/src/app/creator/gameform/regras/regras-prep/regras-prep.component.html
+++ b/src/app/creator/gameform/regras/regras-prep/regras-prep.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="regrasFormGroup">
   <h3 class="title  purple-text">Preparação</h3>
-      <div class="container">
+      <div >
         <div class="row">
           
           <div class="row">
