--- a/src/app/creator/shared/fileupload/fileupload.component.html
+++ b/src/app/creator/shared/fileupload/fileupload.component.html
@@ -1,12 +1,11 @@
-<div class="file-field input-field col s12 ol-fileupload">
-    <div class="btn white-text">
+<div class="file-field input-field row ol-fileupload">
+    <div class="btn white-text col s3">
       <i class="material-icons">image</i>
       <span> {{label}}</span>
       <input type="file" (change)="fileChanged($event)" accept="{{_accepts}}" >
     </div>
-    <div class="file-path-wrapper">
+    <div class="col s9 center">
       <i *ngIf="!hideSpinner" class="material-icons spinner sufix">autorenew</i>
-        <input class="file-path validate" type="text">
+      <img src="{{_value}}" alt="image preview" class="responsive-img " [hidden]="!_value">
     </div>
-    <img src="{{_value}}" alt="image preview" class="preview" [hidden]="!_value">
 </div>
