--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,9 +1,9 @@
 nav{
     position: fixed;
-    height: 45px;
-    line-height: 45px;
+    height: 60px;
+    line-height: 60px;
     padding: 0 20px 0 20px;
-    background: linear-gradient(to right,  rgba(0,0,0, 0.0),  rgba(0,0,0, 0.1),  rgba(0,0,0, 0.8));
+    background: linear-gradient( to bottom right, #9C27B0, #E91E63);
     box-shadow:none;
     z-index: 999999;
 }
