layout regras, design

--- a/src/app/creator/gameform/design/menu/menu.component.html
+++ b/src/app/creator/gameform/design/menu/menu.component.html
@@ -14,7 +14,7 @@
     </li>
     <li class="valign"><a ><i class="material-icons-outlined  black-text">more_vert</i></a></li>
   </ul>
-    <ul class="right valign-wrapper">
+    <ul class="right right-2 valign-wrapper">
          <li class="valign"><a (click)="creator.saveItem()"><i class="material-icons-outlined  black-text">save</i></a></li>
         <li class="valign"><a><i class="material-icons-outlined  black-text">refresh</i></a></li>
         <li class="valign"><a><i class="material-icons-outlined  black-text">more_vert</i></a></li>
