--- a/src/app/creator/gameform/jogo/jogo-preview/jogo-preview.component.html
+++ b/src/app/creator/gameform/jogo/jogo-preview/jogo-preview.component.html
@@ -89,7 +89,7 @@
 
 <div class="row">
   <div class="row">
-    <button (click)="registerForm()" class="btn green right">gravar e continuar</button>
+    <button (click)="registerForm()" class="btn green next-step">gravar e continuar</button>
     <a class="btn-flat purple-text right previous-step">voltar</a>
   </div>
 </div>
