--- a/src/app/creator/gameform/regras/regras-conclusao/regras-conclusao.component.html
+++ b/src/app/creator/gameform/regras/regras-conclusao/regras-conclusao.component.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="row top-5">
-          <button (click)="registerForm()" [disabled]="regrasFormGroup.invalid" class="btn green right">próximo</button>
+          <button (click)="registerForm()" [disabled]="regrasFormGroup.invalid" class="btn green next-step">próximo</button>
         </div>
       </div>
 </form>
