--- a/src/app/creator/gameform/regras/regras-preview/regras-preview.component.html
+++ b/src/app/creator/gameform/regras/regras-preview/regras-preview.component.html
@@ -44,7 +44,7 @@
 </div>
 
   <div class="row">
-    <button (click)="registerForm()" class="btn green right">gravar e
+    <button (click)="registerForm()" class="btn green next-step">gravar e
       continuar</button>
     <a class="btn-flat purple-text right previous-step">voltar</a>
   </div>
