--- a/src/app/creator/gameform/regras/regras.component.html
+++ b/src/app/creator/gameform/regras/regras.component.html
@@ -1,9 +1,9 @@
 <div id="regrasmain" class="row top-5">
-  <div class="col m3">
+  <div class="col m3 fixed">
   <h2 class="session-title">Regras</h2>
     <app-regras-nav></app-regras-nav>
   </div>
-  <div class="col m8">
+  <div class="col m9 left-20" >
     <router-outlet></router-outlet>
   </div>
  
