--- a/src/app/creator/ui/range/range.component.html
+++ b/src/app/creator/ui/range/range.component.html
@@ -1,12 +1,12 @@
 <div class="col m5">
- <p class="tiny left col m4 rangetitle pink-text" >De: {{deValue}}</p> 
- <p class="range-field col m8">
+ <p class="tiny left col m4 rangetitle black-text" >De: {{deValue}}</p> 
+ <p class="range-field col m8 top-0">
   <input type="range" (change)="updateDe($event)" value="0" value="{{deValue}}"  min="{{minDe}}" max="{{maxDe}}" step="{{tick}}"  />
 </p>
 </div>
 <div class="col m5">
- <p class="tiny left col m4 rangetitle pink-text" >Até: {{ateValue}}</p>
- <p class="range-field col m8">
+ <p class="tiny left col m4 rangetitle black-text" >Até: {{ateValue}}</p>
+ <p class="range-field col m8 top-0">
   <input type="range"  #ctrate (change)="updateAte($event)" value="{{ateValue}}" min="{{deValue || minAte}}" max="{{maxAte}}" step="{{tick}}"/>
 </p> 
 </div>
