--- a/src/app/creator/gameform/design/components/components.component.html
+++ b/src/app/creator/gameform/design/components/components.component.html
@@ -1,5 +1,5 @@
-<div id="components" class="tool-container" (cdkDropListDropped)="creator.dropElement($event)" cdkDropListConnectedTo="canvas" cdkDropList>
-   <app-searchbar></app-searchbar> 
+<div id="components" class="tool-container ptop-5" (cdkDropListDropped)="creator.dropElement($event)" cdkDropListConnectedTo="canvas" cdkDropList>
+   <app-searchbar ></app-searchbar> 
   <div cdkDrag [cdkDragData]="item" *ngFor="let item of creator.componentesData" (doubleclick)="creator.addComponentToCanvas(item)" class=" tool-item hoverable" >
     <a routerLinkActive="active" class="grey-text">
       <i class="material-icons-outlined grey-text">{{item.icon}}</i>
