--- a/src/app/creator/shared/toolbox/toolbox.component.css
+++ b/src/app/creator/shared/toolbox/toolbox.component.css
@@ -1,10 +1,14 @@
 .toolbox-nav{
     width: 80px;
     background: linear-gradient(to right, rgb(48, 47, 47), rgb(34, 33, 34));
-    height: 100vh;
-    padding: 40px 5px 10px 5px ;
+    height: 93vh;
+    padding: 0px ;
     z-index: 100;
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #router-container{
@@ -36,8 +40,8 @@
 
 
 .toolbox-nav li{
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     width: 100%;
     cursor: pointer;
 }
