--- a/src/app/creator/gameform/design/design.component.html
+++ b/src/app/creator/gameform/design/design.component.html
@@ -4,5 +4,6 @@
     <app-menu ></app-menu>
     <app-canvas></app-canvas>
     <app-drawer></app-drawer>
+    <app-modifiers-panel></app-modifiers-panel>
   </div>  
 </div>
