--- a/src/app/creator/gameform/design/modifiers/modifiers-panel/modifiers-panel.component.css
+++ b/src/app/creator/gameform/design/modifiers/modifiers-panel/modifiers-panel.component.css
@@ -2,8 +2,10 @@
     position: fixed;
     top:20vh;
     right: 2vw;
-    background-color: blueviolet;
     width: 20vw;
     min-height: 10vh;
     height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
 }
