--- a/src/app/creator/gameform/design/drawer/drawer.component.css
+++ b/src/app/creator/gameform/design/drawer/drawer.component.css
@@ -3,7 +3,7 @@
     height: 200px;
     display: block;
     line-height: 95px;
-    
+    z-index:10;
     position: absolute;
     background: linear-gradient(to top, rgb(255, 255, 255), rgb(223, 223, 223));
     border-radius: 10px 0px 0px 0px;
