--- a/src/app/creator/gameform/design/modifiers/modifier-radio/modifier-radio.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier-radio/modifier-radio.component.html
@@ -1,7 +1,9 @@
 <form >
     <p *ngFor="let option of modifier.options">
       <label>
-        <input name="{{modifier.property}}" value="{{option}}" type="radio" />
+        <input name="{{modifier.property}}" value="{{option}}" type="radio" 
+        (ngModelChange)="onOptionChange($event)"
+        [(ngModel)]="selectedOption"/>
         <span>{{option}}</span>
       </label>
     </p>
