--- a/src/app/creator/gameform/design/uploads/uploads.component.html
+++ b/src/app/creator/gameform/design/uploads/uploads.component.html
@@ -1,1 +1,7 @@
-<p>uploads works!</p>
+<div class="row">
+    <div class="col s4 preview-container" *ngFor="let upload of uploads">
+        <img src="{{upload.file}}" alt="image preview" class="responsive-img">
+        <i class="material-icons">delete</i>
+        <i class="material-icons">info</i>
+    </div>
+</div>
