--- a/src/app/creator/gameform/design/canvas/canvas.component.html
+++ b/src/app/creator/gameform/design/canvas/canvas.component.html
@@ -4,3 +4,4 @@
 
 <div id="editableObject" [ngStyle]="{'zoom': creator.zoomValue/100}" cdkDragBoundary="#canvas" cdkDrag></div>
 <div class="message">{{creator.message}}</div>
+dhay
