--- a/src/app/creator/gameform/design/uploads/uploads.component.css
+++ b/src/app/creator/gameform/design/uploads/uploads.component.css
@@ -1,6 +1,21 @@
-.preview-container i{
+.preview-container {
+    position: relative;
+    height: 100px;
+    width:  100px;
+    padding:2px;
+}
+.preview-content{
+    height: 84px;
+    width: 84px;
+    background-size: cover;
+    background-position: center;
+}
+.preview-container .tools-container{
     position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
+    bottom: 0px;
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.tools-container i{
+    font-size: 19px;
 }
