--- a/src/app/creator/gameform/design/uploads/uploads.component.html
+++ b/src/app/creator/gameform/design/uploads/uploads.component.html
@@ -5,7 +5,7 @@
             [path]="path" [multiple]="true"></app-fileupload>
     </div>
     <div class="row">
-        <div class="col s4 preview-container" *ngFor="let upload of uploads">
+        <div class="col s4 preview-container top-1" *ngFor="let upload of uploads">
           <div class="preview-content"  [ngStyle]="{'background-image': 'url('+upload.url+')'}"></div>
            <div class="tools-container">
                <i class="material-icons white-text link right">delete</i>
