--- a/src/app/creator/gameform/regras/regras-basico/regras-basico.component.html
+++ b/src/app/creator/gameform/regras/regras-basico/regras-basico.component.html
@@ -7,9 +7,10 @@
           <div class="row">
             <h3>Descreva as regras do jogo:</h3>
             <div class="col s12">
-              <ngx-wig  formControlName="regras" [placeholder]="'Digite cada regra separadamente.'"
+              <ngx-wig [id]="'rules'" formControlName="regras" [placeholder]="'Digite cada regra separadamente.'"
                 class="col m12 top-3" >
               </ngx-wig>
+              <app-ai-button label="gerar com IA" class="top-2" (click)="generateRules(this.regrasFormGroup.controls['regras'].value)"></app-ai-button> 
             </div>
           </div>
         </div>
