--- a/src/app/creator/gameform/regras/regras-partida/regras-partida.component.html
+++ b/src/app/creator/gameform/regras/regras-partida/regras-partida.component.html
@@ -11,6 +11,8 @@
                 [placeholder]="'Digite o que ocorre em cada etapa ou rodada da partida.'" class="col m12 top-3"
                 >
               </ngx-wig>
+              <app-ai-button label="gerar com IA" class="top-2" (click)="generateRules(this.regrasFormGroup.controls['durante'].value)"></app-ai-button> 
+
             </div>
           </div>
         </div>
