--- a/src/app/creator/shared/prompt-input/prompt-input.component.css
+++ b/src/app/creator/shared/prompt-input/prompt-input.component.css
@@ -4,5 +4,6 @@
     height: 80px!important;
     padding: 5px;
     font-size: 12px;
-    color: #FFF;
+    color: #000;
+    background-color: #FFF;
 }
