--- a/src/app/creator/gameform/jogo/jogo-preview/jogo-preview.component.html
+++ b/src/app/creator/gameform/jogo/jogo-preview/jogo-preview.component.html
@@ -47,6 +47,7 @@
     <div class="col s12  catalog-item">
       <div class="card">
         <div class="card-image">
+          <img src="{{gamedataservice.game.logo}}" class="game-logo">
           <img src="{{gamedataservice.game.header}}">
         </div>
         <div class="card-content">
