--- a/src/app/creator/gameform/design/drawer/drawer.component.html
+++ b/src/app/creator/gameform/design/drawer/drawer.component.html
@@ -8,7 +8,10 @@
     
     <i *ngIf="opened"  class="material-icons-outlined arrow">expand_more</i>
     <i *ngIf="!opened" class="material-icons-outlined arrow">expand_less</i></button>
-  <div class="row">
-
+  <div id="components" class="row components-container" (cdkDropListDropped)="creator.dropElement($event)" cdkDropListConnectedTo="canvas" cdkDropList>
+    <div class="component" *ngFor="let component of components" cdkDrag [cdkDragData]="component">
+      <img src="{{component.imagem}}" class="component-image" alt="">
+      <p>{{component.name}}</p>
+    </div>
   </div>
 </div>
