--- a/src/app/creator/shared/fileupload/fileupload.component.html
+++ b/src/app/creator/shared/fileupload/fileupload.component.html
@@ -6,6 +6,6 @@
     </div>
     <div class="col s9 center">
       <i *ngIf="!hideSpinner" class="material-icons spinner sufix">autorenew</i>
-      <img src="{{_value}}" alt="image preview" class="responsive-img " [hidden]="!_value || multiple">
+      <img src="{{_value}}" alt="image preview" class="responsive-img preview" [hidden]="!_value || multiple">
     </div>
 </div>
