--- a/src/app/creator/gameform/regras/regras-conclusao/regras-conclusao.component.html
+++ b/src/app/creator/gameform/regras/regras-conclusao/regras-conclusao.component.html
@@ -4,18 +4,20 @@
         <div class="row">
           <div class="col m12">
             <h3>Descreva como é definido o vencedor:</h3>
-            <ngx-wig  formControlName="vencedor" [placeholder]="''" class="col m12 top-3"
-              >
-            </ngx-wig>
+            <ngx-wig  formControlName="vencedor" [placeholder]="''" class="col m12 top-3 bottom-1"
+              ></ngx-wig>
+              <app-ai-button label="gerar com IA" class="top-2 left-1" (click)="generateRules('vencedor', this.regrasFormGroup.controls['vencedor'].value)"></app-ai-button> 
+
           </div>
 
           <div class="col m12 top-5">
 
             <h3>Descreva como termina a partida:</h3>
 
-            <ngx-wig formControlName="conclusao" [placeholder]="''" class="col m12 top-3"
-              >
-            </ngx-wig>
+            <ngx-wig formControlName="conclusao" [placeholder]="''" class="col m12 top-3 bottom-1"
+              >  </ngx-wig>
+              <app-ai-button label="gerar com IA" class="top-2 left-1" (click)="generateRules('conclusao', this.regrasFormGroup.controls['conclusao'].value)"></app-ai-button> 
+
           </div>
         </div>
 
