--- a/src/app/creator/gameform/design/design.component.html
+++ b/src/app/creator/gameform/design/design.component.html
@@ -3,7 +3,7 @@
   <div id="area">
     <app-menu ></app-menu>
     <app-canvas></app-canvas>
-    <app-drawer></app-drawer>
+    <app-drawer [closed]="creator.closedrawer" ></app-drawer>
     <app-modifiers-panel></app-modifiers-panel>
   </div>  
 </div>
