--- a/src/app/creator/gameform/design/drawer/drawer.component.html
+++ b/src/app/creator/gameform/design/drawer/drawer.component.html
@@ -1,13 +1,13 @@
 
-<div class="design-drawer z-depth-1" [ngClass]="{'opened': opened}">
-    <button (click)="opened = !opened" aria-label="Mostrar páginas" class="BIeccA CGQFuA"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 16"
+<div class="design-drawer z-depth-1" [ngClass]="{'opened': !closed}">
+    <button (click)="closed = !closed" aria-label="Mostrar páginas" class="BIeccA CGQFuA"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 16"
         width="96" height="16" fill="rgb(223, 223, 223)">
         <path class="Axi_6A" d="M0 16v-4c20 0 12-12 32-12h32c20 0 12 12 32 12V16z"></path>
         <path class="zl9Kag" d="M0 12.5c20 0 12-12 32-12h32c20 0 12 12 32 12"></path>
       </svg>
     
-    <i *ngIf="opened"  class="material-icons-outlined arrow">expand_more</i>
-    <i *ngIf="!opened" class="material-icons-outlined arrow">expand_less</i></button>
+    <i *ngIf="!closed"  class="material-icons-outlined arrow">expand_more</i>
+    <i *ngIf="closed" class="material-icons-outlined arrow">expand_less</i></button>
   <div id="components" class="row components-container" (cdkDropListDropped)="creator.dropElement($event)" cdkDropListConnectedTo="canvas" cdkDropList>
     <div class="component" *ngFor="let component of components" cdkDrag [cdkDragData]="component">
       <img src="{{component.imagem}}" class="component-image" alt="">
