--- a/src/app/creator/gameform/design/menu/menu.component.html
+++ b/src/app/creator/gameform/design/menu/menu.component.html
@@ -2,8 +2,8 @@
   <ul class="left valign-wrapper" *ngIf="creator.hasItem()">
     <li>
       <label for="componentename" class="black-text">Nome do Componente: </label>
-      <input type="text" name="componentename" id="componentename" class="browser-default" [(ngModel)]="history.currentSnapshot.name"
-       (keyup)="history.updateItemSnapshot({'name':$event.target.value})">
+      <input type="text" name="componentename" id="componentename" class="browser-default" [(ngModel)]="creator.currentComponent.name"
+       >
     </li>
     <li class="valign" >
       <app-zoom  [value]="creator.zoomValue" (zoomValueChange)="creator.zoomValueChange($event)"></app-zoom>
