--- a/src/styles.css
+++ b/src/styles.css
@@ -339,3 +339,27 @@ a.disabled {
       transform:rotate(360deg);
   }
 }
+
+
+/* Scrollbar track */
+.scroll-panel::-webkit-scrollbar {
+  width:  10px; /* Width of the scrollbar */
+  height: 10px; /* Width of the scrollbar */
+}
+
+/* Scrollbar handle */
+.scroll-panel::-webkit-scrollbar-thumb {
+  background-color: darkgrey; /* Color of the scrollbar handle */
+  border-radius: 6px; /* Roundness of the scrollbar handle */
+}
+
+/* Scrollbar handle on hover */
+.scroll-panel::-webkit-scrollbar-thumb:hover {
+  background-color: grey; /* Color when hovering */
+}
+
+/* Scrollbar track */
+.scroll-panel::-webkit-scrollbar-track {
+  background: lightgrey; /* Color of the track */
+  border-radius: 6px; /* Roundness of the track */
+}
