--- a/src/app/creator/gameform/design/drawer/drawer.component.css
+++ b/src/app/creator/gameform/design/drawer/drawer.component.css
@@ -17,9 +17,11 @@
 }
 
 .components-container{
-    width:auto;
+    width:100%;
     display: flex;
     flex-direction: row;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .component{
