--- a/src/app/creator/gameform/design/drawer/drawer.component.html
+++ b/src/app/creator/gameform/design/drawer/drawer.component.html
@@ -1,5 +1,5 @@
 
-<div class="design-drawer z-depth-1" [ngClass]="{'opened': !closed}">
+<div class="design-drawer z-depth-1 " [ngClass]="{'opened': !closed}">
     <button (click)="closed = !closed" aria-label="Mostrar páginas" class="BIeccA CGQFuA"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 16"
         width="96" height="16" fill="rgb(223, 223, 223)">
         <path class="Axi_6A" d="M0 16v-4c20 0 12-12 32-12h32c20 0 12 12 32 12V16z"></path>
@@ -8,7 +8,7 @@
     
     <i *ngIf="!closed"  class="material-icons-outlined arrow">expand_more</i>
     <i *ngIf="closed" class="material-icons-outlined arrow">expand_less</i></button>
-  <div id="components" class="row components-container" (cdkDropListDropped)="creator.dropElement($event)" cdkDropListConnectedTo="canvas" cdkDropList>
+  <div id="components" class="row components-container small" (cdkDropListDropped)="creator.dropElement($event)" cdkDropListConnectedTo="canvas" cdkDropList>
     <div class="component" *ngFor="let component of components" cdkDrag [cdkDragData]="component">
       <img src="{{component.imagem}}" class="component-image" alt="">
       <p>{{component.name}}</p>
