--- a/src/app/creator/gameform/design/modifiers/modifier/modifier.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier/modifier.component.html
@@ -14,6 +14,7 @@
         </div>
        
         <app-modifier-radio *ngIf="modifier.type == 'radio'" [modifier]="modifier"></app-modifier-radio>
+        <app-modifier-input *ngIf="modifier.type == 'input'" [modifier]="modifier"></app-modifier-input>
         <app-modifier-image *ngIf="modifier.type == 'image'" [modifier]="modifier"></app-modifier-image>
     </div>
 </div>
