--- a/src/styles.css
+++ b/src/styles.css
@@ -35,12 +35,11 @@ textarea{
   padding: 8px 13px!important;
 }
 
-select.small{
+select.small, input.small{
   padding: 0!important;
-    font-size: 12px;
-    height: 23px;
-    border-radius: 20px;
-    width: 200px;
+  font-size: 12px;
+  height: 23px;
+  border-radius: 20px;
 }
 
 #singleton .row .col{
@@ -327,6 +326,23 @@ a.disabled {
    text-align: center;
 }
 
+.tool-title{
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    font-weight: normal;
+    color: white;
+}
+
+.tab-button{
+    margin-right: 10px;
+    padding: 4px 8px;
+    border: 1px solid #CCC;
+    background-color: #3c3d3e;
+    color: white;
+    cursor: pointer;
+    font-size: 10px;
+    border-radius: 18px;
+}
 
 .spinner{
   color:rgb(124, 92, 137);
