--- a/src/app/creator/gameform/design/text/text.component.html
+++ b/src/app/creator/gameform/design/text/text.component.html
@@ -13,7 +13,7 @@
 
     <div class="row top-5 text-container" [hidden]="activeTab != 'edit'">
        <app-font-selector (colorChange)="onColorChange($event)" (fontChange)="onFontChange($event)" (sizeChange)="onFontSizeChange($event)" (styleChange)="onFontStyleChange($event)"></app-font-selector>
-        <textarea #textinput class="top-3" name="textInput" cols="30" rows="10" [(NgModel)]="currentContent"
+        <textarea #textinput class="top-3" name="textInput" cols="30" rows="10" [(ngModel)]="currentContent"
         [ngStyle]="{'font-family': selectedFont, 'color': selectedColor, 'font-size': selectedSize + 'px', 'font-style': selectedStyle}"
          style="height: 90px;"></textarea>
         <app-ai-button label="gerar com IA" (click)="generateText(textinput.value)"></app-ai-button> 
@@ -22,8 +22,8 @@
             salvar</a>
     </div>
 
-    <div class="row">
-        <div class="col s12 textcard" *ngFor="let item of items" >
+    <div id="text-container" class="row" (cdkDropListDropped)="creator.dropText($event)" cdkDropListConnectedTo="canvas" cdkDropList>
+        <div class="col s12 textcard" *ngFor="let item of items" cdkDrag [cdkDragData]="item">
                 <span [ngStyle]="{'font-family': item.selectedFont, 'color': item.selectedColor, 'font-size': item.selectedSize + 'px', 'font-style': item.selectedStyle}"
                 class="card-title">{{item.content}}</span>
         </div>
