--- a/src/app/creator/gameform/design/modifiers/modifier/modifier.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier/modifier.component.html
@@ -18,5 +18,6 @@
         <app-modifier-number *ngIf="modifier.type == 'number'" [modifier]="modifier"></app-modifier-number>
         <app-modifier-image *ngIf="modifier.type == 'image'" [modifier]="modifier"></app-modifier-image>
         <app-modifier-color *ngIf="modifier.type == 'color'" [modifier]="modifier"></app-modifier-color>
+        <app-modifier-text *ngIf="modifier.type == 'text'" [modifier]="modifier"></app-modifier-text>
     </div>
 </div>
