--- a/src/app/creator/gameform/design/modifiers/modifier-text/modifier-text.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier-text/modifier-text.component.html
@@ -1,3 +1,4 @@
 <div class="col s12">
+    <app-align-selector (verticalChange)="onVerticalChange($event)" (horizontalChange)="onHorizontalChange($event)"></app-align-selector>
     <app-text-editor (textChange)="onTextChange($event)" [textData]="modifier.data"></app-text-editor>
 </div>
